Removed sonar issues